RESOLVED FIXED233735
validity.valueMissing should not rely on element's disabled state for inputs of type radio/file/checkbox
https://bugs.webkit.org/show_bug.cgi?id=233735
Summary validity.valueMissing should not rely on element's disabled state for inputs ...
Chris Dumez
Reported 2021-12-01 16:41:57 PST
validity.valueMissing should not rely on element's disabled state for inputs of type radio/file/checkbox.
Attachments
Patch (10.30 KB, patch)
2021-12-01 16:47 PST, Chris Dumez
no flags
Patch (12.40 KB, patch)
2021-12-01 20:40 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-12-01 16:47:02 PST
Chris Dumez
Comment 2 2021-12-01 20:40:16 PST
EWS
Comment 3 2021-12-01 22:05:17 PST
Committed r286413 (244759@main): <https://commits.webkit.org/244759@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 445665 [details].
Radar WebKit Bug Importer
Comment 4 2021-12-01 22:06:29 PST
Note You need to log in before you can comment on or make changes to this bug.