validity.valueMissing should not rely on element's disabled state for inputs of type radio/file/checkbox https://bugs.webkit.org/show_bug.cgi?id=233735

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Rebaseline WPT tests now that more checks are passing.

* web-platform-tests/html/semantics/forms/constraints/form-validation-validity-valueMissing-expected.txt:
* web-platform-tests/html/semantics/forms/constraints/radio-valueMissing-expected.txt:

Source/WebCore:

validity.valueMissing should not rely on element's disabled state for inputs of type radio/file/checkbox:
- https://html.spec.whatwg.org/multipage/input.html#radio-button-state-(type=radio):suffering-from-being-missing
- https://html.spec.whatwg.org/multipage/input.html#file-upload-state-(type=file):suffering-from-being-missing
- https://html.spec.whatwg.org/multipage/input.html#checkbox-state-(type=checkbox):suffering-from-being-missing

This was causing us to fail a few WPT tests that are passing in both Blink and Gecko.

* html/BaseDateAndTimeInputType.cpp:
(WebCore::BaseDateAndTimeInputType::valueMissing const):
* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::valueMissing const):
* html/TextFieldInputType.cpp:
(WebCore::TextFieldInputType::valueMissing const):

LayoutTests:

Rebaseline WPT tests now that more checks are passing.

* platform/mac-wk2/imported/w3c/web-platform-tests/html/semantics/forms/constraints/form-validation-validity-valueMissing-expected.txt:



Canonical link: https://commits.webkit.org/244759@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286413 268f45cc-cd09-0410-ab3c-d52691b4dbfc